dist/entities/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-auth-ingress
  namespace: repoflow-blog-namespace
  labels:
    moduleid: microservice-auth-realm
    version: 1.70.0-master
    last_updated: CHANGE_TO_UNIXTS
spec:
  tls:
    - hosts:
        - blog.repoflow.com
      secretName: certificates-secret
  rules:
    - host: blog.repoflow.com
      http:
        paths:
          - path: /auth/backend
            backend:
              serviceName: auth-graph-service
              servicePort: 4000
          - path: /auth
            backend:
              serviceName: auth-web-service
              servicePort: 3000
